housekeeping + bugsquashing

--- a/app/static/css/transinformed.css
+++ b/app/static/css/transinformed.css
@@ -30,8 +30,8 @@ details summary > * {
   .blog-content img {
     display: block;
     margin: auto;
-    max-height: 50%;
-    width: auto;
+    max-width: 100%;
+    height: auto;
   }
   .blog-content p {
     font-size: large;
